syntax = "proto3";
package user_center;

message User
{
    int32 id = 1;
    string username = 2;
    string password = 3;
}

message UserExtra 
{
    int32 id = 1;
    string email = 2;
    string phone = 3;
    string avatar_url = 4;
}

message RegisterRequest
{
    User user = 1;
    UserExtra user_extra = 2;
}

message RegisterResponse
{
    int32 id = 1;
}

message LoginRequest
{
    string username = 1;
    string password = 2;
}

message LoginResponse
{
    string access_token = 1;
    string refresh_token = 2;
    int64 access_exp = 3;
    int64 refresh_exp = 4;
    uint32 user_id = 5;
    repeated string auth_list = 6;
}

message UserInfo 
{
    int32 id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    string avatar_url = 5;
}

message CheckTokenRequest 
{
    string token = 1;
    bool isRefresh = 2;
}

message CheckTokenResponse
{
    UserInfo user = 1;
}

message RefreshRequest
{
    string refresh_token = 1;
}

message RefreshResponse
{
    string access_token = 1;
    string refresh_token = 2;
    int64 access_exp = 3;
    int64 refresh_exp = 4;
}